--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -18,14 +18,19 @@ h2{
 }
 
 .card-panel{
-	width: 250px;
-	height: 300px;
+	width: 400px;
+	height: 450px;
 	background-color: #FFFFA5;
 }
 
 .container{
 	margin: 0 auto; 
 	margin-left: 25%;
+}
+
+.logos{
+	width: 150px;
+	height: 150px;
 }
 
 .modal{
