--- a/public/stylesheets/student.css
+++ b/public/stylesheets/student.css
@@ -8,12 +8,18 @@ h2{
 	font-family: "Lucida Console", "Courier New", monospace;
 }
 
-textarea {
-    overflow-y: scroll;
-    height: 100px;
+h6, p{
+	font-weight: bold;
 }
 
+header{
+	text-align: right;
+}
 
+textarea {
+    overflow-y: scroll;
+    height: 170px;
+}
 
 .btn{
 	color: black;
@@ -25,13 +31,19 @@ textarea {
 
 .card-panel{
 	width: 380px;
-	height: 450px;
+	height: 560px;
 	background-color: #FFFFA5;
+	border-radius: 20px;
+	font-size: 14px;
 }
 
 .container{
 	margin: 0 auto; 
 	margin-left: 25%;
+}
+
+.grpnum{
+	float: left;
 }
 
 .logos{
@@ -64,6 +76,10 @@ textarea {
 	margin: 2%;
 	color: black;
 	text-align: left;
+}
+
+.removebtn{
+	text-align: right;
 }
 
 .side-nav{
