--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url('../images/bg.jpg');
+	background-image: url('../images/bg.jpeg');
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -10,6 +10,13 @@ body{
 #logo{
 	width: 300px;
 	height: 300px;
+}
+
+#submitPIN{
+	width: 100px;
+	height: 50px;
+	font-size: 20px;
+	float: right;
 }
 
 .flip {
@@ -50,11 +57,11 @@ body{
 }
 
 .modal{
-	width: 320px; 
-	background-color: pink; 
+	width: 320px;
+	height: 390px; 
 	font-weight: bold;
+	font-size: 20px;
 }
-
 .profile{
     border: 3px solid #B7B7B7;
     padding: 10px;
