--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -12,6 +12,18 @@ body{
 	height: 300px;
 }
 
+#modal2{
+	width: 320px;
+	height: 390px; 
+	font-weight: bold;
+	font-size: 20px;
+}
+
+#modal1{
+	width: 320px;
+	height: 310px;
+}
+
 #submitPIN{
 	width: 100px;
 	height: 50px;
@@ -56,12 +68,6 @@ body{
 	padding-top: 20px;
 }
 
-.modal{
-	width: 320px;
-	height: 390px; 
-	font-weight: bold;
-	font-size: 20px;
-}
 .profile{
     border: 3px solid #B7B7B7;
     padding: 10px;
