fixed ui issues

--- a/public/templates/productAdmin.html
+++ b/public/templates/productAdmin.html
@@ -7,6 +7,6 @@
 		<img class='logos' src=${imageFile}>
 	</div>
 	<p class='center'> ${ productName } </p>
-	<textarea readonly> ${ productDesc } </textarea>
+	<textarea readonly style="overflow:auto;resize:none"> ${ productDesc } </textarea>
 	<p class='center'> Total Investments: ${investments} </p>
 </div>
