--- a/public/stylesheets/student.css
+++ b/public/stylesheets/student.css
@@ -8,7 +8,7 @@ h2{
 	font-family: "Lucida Console", "Courier New", monospace;
 }
 
-h6, p{
+p{
 	font-weight: bold;
 }
 
@@ -19,6 +19,10 @@ header{
 textarea {
     overflow-y: scroll;
     height: 170px;
+}
+
+span{
+	font-size: 13px;
 }
 
 .btn{
